@@ -1,5 +1,8 @@
 2001-05-06  Christian Stimming  <stimming@tuhh.de>
 
+	* src/scm/report/price-scatter.scm: add options for marker shape
+	and color.
+
 	* src/scm/report/transaction-report.scm: fix bug.
 
 2001-05-05  Dave Peticolas  <dave@krondo.com>
